# portfolio-website-v3

./: .env.example  .gitignore  README.md  VERCEL_DEPLOYMENT_GUIDE.md  custom_types.py  main.py  pyproject.toml  requirements-vercel.txt  requirements.txt  streamlit_app.py  vector_db.py  vercel.json
api/: main.py
backend/: .env.example  data_loader.py  main.py  pyproject.toml  requirements.txt  vector_db.py  vercel.json
backend/api/: main.py  vercel_handler.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/anirudhs-wall/: page.tsx
frontend/app/api/analyze-alignment/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/ingest/: route.ts
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/projects/: page.tsx
frontend/components/: about.tsx  animated-section.tsx  contact.tsx  experience-timeline.tsx  experience.tsx  hero.tsx  navbar.tsx  projects-display.tsx  projects.tsx  scroll-to-top.tsx  skills.tsx
frontend/lib/: experience.ts  github.ts
