[project]
name = "production-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core web framework
    "fastapi>=0.124.4",
    "pydantic>=2.10.3",
    "python-multipart>=0.0.17",
    
    # Vector database
    "qdrant-client>=1.16.2",
    
    # AI/LLM integration
    "google-generativeai>=0.8.0",
    
    # Document processing
    "pypdf>=3.17.0",
    "sentence-transformers>=2.2.2",
    
    # Utilities
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "uuid>=1.30"
]
